# project-brilliant

./: .gitignore  .travis.yml  Cargo.toml  README.md
infinite-auction/: Cargo.toml
infinite-auction/src/: lib.rs
infinite_auction/: __init__.py  test.py
project-brilliant-db/: Cargo.toml
project-brilliant-db/src/: lib.rs
project-brilliant-utilities/: Cargo.toml
project-brilliant-utilities/src/: lib.rs
