[package]
name = "project-brilliant"
version = "0.0.0"
authors = ["wizzwizz4"]
edition = "2018"
publish = false  # It's not stable yet!

[dependencies.infinite-auction]
version = "*"
path = "infinite-auction"

[badges]
travis-ci = { repository = "wizzwizz4/project-brilliant" }

[workspace]
members = [
    "infinite-auction",
    "project-brilliant-utilities",
    "project-brilliant-db"
]
